# clean-architecture-fastapi

./: .env.dev  .env.prod  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3ed28bb6b6a4_remove_elployee_id.py  5f58630cb053_initial_migration.py
app/core/constant/: http_status_code.py  log_constants.py
app/core/exception/: global_exception_handler.py
app/core/schema/: address_model.py  authentication_schema.py  token_schema.py  user_schema.py  users_schema.py
app/core/usecases/: api_validation.py  auth_usecase.py  role_usecase.py  token_processor_usecase.py  (+1 more)
deploy/dev/: .helmignore  Chart.yaml  values.yaml
deploy/prod/: Chart.yaml  values.yaml
infradetails/filter/: query_filter.py
infradetails/gateways/: base_token_gateway.py  keycloak_manager.py  test_gateway.py  test_gateway_2.py
infradetails/model/: base_mixin_model.py  event_model.py  event_sebscriber_model.py  office_model.py  organization_model.py  role_model.py  user_model.py  user_role_model.py
infradetails/repositories/: authentor_repository.py  role_repository.py  user_repository.py
infrastructure/: lifespan_manager.py  main.py
infrastructure/configuration/: api_validation_bean_container.py  auth_and_token_bean_config.py  bean_configs.py  bean_container.py  cors_config.py  db_config.py  keycloak_config.py  log_config.py  middleware.py  user_bean_container.py
infrastructure/routes/: api_router.py  authentication_controller.py  role_controller.py  user_controller.py
infrastructure/settings/: settings.py
(+21 files in other folders)
